[package]
name = "macyeet"
version = "0.1.1"
edition = "2024"
description = "Drag and drop files into any macOS application from the command line"
license = "MIT"
repository = "https://github.com/milgrim/macyeet"
keywords = ["drag-and-drop", "macos", "cli", "files"]
categories = ["command-line-utilities", "os::macos-apis"]
readme = "README.md"
exclude = ["justfile"]

[[bin]]
name = "yeet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSArray", "NSURL", "NSNotification", "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication", "NSResponder", "NSWindow", "NSView", "NSEvent",
    "NSPasteboard", "NSDragging", "NSDraggingItem", "NSDraggingSession",
    "NSRunningApplication", "NSTextField", "NSGraphics", "NSControl",
    "NSImage", "NSText",
] }

[profile.release]
strip = true
lto = true
